--- a/enrollment.html
+++ b/enrollment.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="enrollmentstyle.css">
 </head>
 <body>
-    <h1><u>STUDENT REGISTRATION FORM</u></h1>
+    <h1>REGISTRATION FORM</h1>
     <table>
         <tr>
             <td>
